# Fractical

./: .gitignore  CMakeLists.txt  README.md  setup.bash
src/: Error.cpp  Error.hpp  FractalRenderer.cpp  FractalRenderer.hpp  Fractals.cpp  Fractals.hpp  Shader.cpp  Shader.hpp  Vertex.cpp  Vertex.hpp  defs.hpp  main.cpp
